--- a/src/styles/Financial.css
+++ b/src/styles/Financial.css
@@ -152,6 +152,30 @@
     bottom: 0; /* Alinhar ao fundo */
     left: 0; /* Alinhar à esquerda */
     right: 0; /* Alinhar à direita */
-    padding: 5px 0; /* Espaçamento interno */
-  
+    padding: 5px; /* Espaçamento interno */
+  }
+
+  .purchases-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 75px;
+    background-color: var(--color-orange-medium) !important;
+    color: white;
+    margin: 0px !important;
+    padding: 0px !important;
+  }
+
+  .purchases-buttons-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px !important;
+    width: 100%;
+    height: 160px;
+    margin-top: 40px;
+  }
+
+  .purchases-buttons-back {
+    background-color: var(--color-blue-dark) !important;
   }
