--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -60,8 +60,8 @@
     width: 100px;
     height: 100px;
     background-color: #f1f1f1;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    border: 1px solid var(--color-blue-medium);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
