--- a/src/styles/AddPonds.css
+++ b/src/styles/AddPonds.css
@@ -87,25 +87,25 @@
     align-items: baseline;
     justify-content: center;
     align-items: center;
-    width: 100%; /* Ocupar toda a largura do botão */
+    width: 100%;
     height: 70%; 
   }
 
   .text-add-pond-wrapper {
     justify-items: center;
     align-content: center;
-    width: 100%; /* Ocupar toda a largura do botão */
+    width: 100%;
     height: 30%; 
-    background-color: var(--color-blue-medium); /* Cor de fundo do texto */
-    color: var(--color-white); /* Cor do texto */
-    text-align: center; /* Centralizar o texto */
-    margin-bottom: 0px; /* Espaçamento interno */
-    border-radius: 0px 0px 5px 5px;
-    
+    background-color: var(--color-blue-medium);
+    color: var(--color-white); 
+    text-align: center; 
+    margin-bottom: 0px; 
+    border-radius: 0px 0px 10px 10px;
+    border: 1px solid var(--color-blue-medium)
   }
   
   .text-add-pond-wrapper span {
-    padding: 5px 0; /* Espaçamento interno */
+    padding: 5px 0;
     margin: 0px;
     align-self: center;
   }  
