--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -107,7 +107,7 @@ h2 {
 
 .icon {
   font-size: 36px;
-  
+
 }
 
 .text-wrapper {
@@ -158,14 +158,15 @@ h2 {
 }
 
 .icon-container {
-  height: 10%;
+  height: 80px;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   position: fixed;
+  align-items: center;
   border-top: 2px solid var(--color-blue-dark);
   bottom: 0;
-  padding: 1rem 0;
+  padding: 10px 0 1rem 0;
   z-index: 1000;
   background-color: var(--color-white2);
 }
@@ -173,38 +174,35 @@ h2 {
 .icon-container-inner {
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  height: 100%;
   align-items: center;
-  width: 80%;
-  justify-content: space-around;
+  width: 100%;
 }
 
 .centered-image {
-  max-width: 100%;
-  height: 100px;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  padding-top: 5px;
+  margin: 0 10px;
+  height: 100% !important;
+  width: auto !important;
 }
 
 .side-icon-button {
   all: unset;
   color: var(--color-orange-dark);
-  align-self: center;
-  position: absolute;
+  height: 80%;
+  width: auto;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid var(--color-blue-dark);
-  border-radius: 5px; */
+  align-items: center;
+  margin: 12px 8px 0px 8px;
 }
 
-.side-icon-button:first-child {
-  left: 0;
-}
-
-.side-icon-button:last-child {
-  right: 0;
+.side-icon-button-text {
+  font-size: 14px;
+  color: var(--color-blue-dark);
+  border-top: 1px solid var(--color-blue-dark);
+  margin-top: 10px;
 }
 
 .popup {
@@ -223,6 +221,7 @@ h2 {
 
 .popup-inner {
   background: var(--color-white);
+  color: var(--color-blue-dark);
   padding: 20px;
   border-radius: 10px;
   max-width: 90%;
@@ -251,5 +250,5 @@ h2 {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  
+
 }
