--- a/src/styles/Financial.css
+++ b/src/styles/Financial.css
@@ -179,3 +179,17 @@
   .purchases-buttons-back {
     background-color: var(--color-blue-dark) !important;
   }
+
+  .buttons-box {
+    display: flex;
+    width: 80%;
+  }
+
+  .delete-button {
+    all: unset;
+    color: var(--color-orange-dark);
+    font-size: 1.5rem;
+    margin: 0px !important;
+    padding: 0px !important;
+    background-color: transparent !important;
+  }
