--- a/src/styles/Financial.css
+++ b/src/styles/Financial.css
@@ -1,12 +1,32 @@
    :root {
+    --color-blue-darkest: #0C1B49;
+    --color-blue-darker: #142E6B;
     --color-blue-dark: #1E3A8A;
     --color-blue-medium: #2563EB;
     --color-blue-light: #93C5FD;
-    --color-white: #FFFFFF;
+    --color-blue-lighter: #BFDBFE;
+    --color-blue-lightest: #E0F2FE;
+    
+    --color-orange-darkest: #7A3100;
+    --color-orange-darker: #C45307;
     --color-orange-dark: #EA580C;
     --color-orange-medium: #FB923C;
     --color-orange-light: #FED7AA;
+    --color-orange-lighter: #FFEDD5;
+    --color-orange-lightest: #FFF7ED;
+    
+    --color-white: #FFFFFF;
     --color-white2: #f3f5f0;
+
+    --color-green-dark: #064E3B;
+    --color-green-medium: #10B981;
+    --color-green-light: #A7F3D0;
+    --color-red-dark: #7F1D1D;
+    --color-red-medium: #EF4444;
+    --color-red-light: #FECACA;
+    --color-yellow-dark: #78350F;
+    --color-yellow-medium: #F59E0B;
+    --color-yellow-light: #FEF3C7;
   }
   
   .financial-container {
@@ -26,6 +46,7 @@
     align-items: center;
     color: var(--color-white);
     background-color: var(--color-blue-dark);
+    z-index: 1000;
   }
   
   .identify-data h3 {
@@ -57,57 +78,18 @@
     width: 120px;
     height: 120px;
     font-size: 18px;
+    margin-top: 0px !important;
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
     text-align: center;
-    position: relative; /* Necessário para posicionamento absoluto dos spans */
-    overflow: hidden; /* Garante que o conteúdo não transborde */
+    position: relative; 
+    overflow: hidden; 
   }
   
   .financial-icon {
     font-size: 30px;
     margin-bottom: 10px;
   }
-  
-  /* .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .popup-inner {
-    background: var(--color-white);
-    padding: 20px;
-    border-radius: 10px;
-    width: 300px;
-  }
-  
-  .popup-inner h3 {
-    margin-top: 0;
-  }
-  
-  .popup-inner form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .popup-inner label {
-    margin-bottom: 10px;
-  }
-  
-  .popup-inner input,
-  .popup-inner textarea {
-    margin-top: 5px;
-    padding: 5px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-  } */
   
   .button-group {
     display: flex;
@@ -200,7 +182,36 @@
   }
 
   .report-total-line {
-    /* background-color: var(--color-blue-light); */
     border-top: 2px solid var(--color-blue-dark) !important;
     border-bottom: 2px solid var(--color-blue-dark) !important;
+  }
+
+  .chart-box {
+    padding: 5px 0px;
+    margin-bottom: 25px;
+  }
+
+  .inputs-head {
+    background-color: var(--color-orange-medium) !important;
+  }
+
+  .payments-head {
+    background-color: var(--color-blue-light) !important;
+    color: var(--color-blue-darkest) !important;
+  }
+
+  .labor-head {
+    background-color: var(--color-red-medium) !important;
+  }
+
+  .total-line-inputs {
+    border-bottom: 2px solid var(--color-orange-medium);
+  }
+
+  .total-line-payments {
+    border-bottom: 2px solid var(--color-blue-light);
+  }
+
+  .total-line-labor {
+    border-bottom: 2px solid var(--color-red-medium);
   }
