--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -7,10 +7,22 @@
   --color-orange-medium: #FB923C;
   --color-orange-light: #FED7AA;
 }
+.loading-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading {
+  margin-top: 2px;
+  margin-bottom: 0;
+}
 
 .identify-data {
-  height: 100px;
   width: 100%;
+  height: 20%;
+  max-height: 20%;
   position: fixed;
   top: 0;
   overflow: hidden;
@@ -37,6 +49,7 @@
 .dashboard-container {
   height: 100%;
   width: 100%;
+  color: var(--color-blue-dark);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,19 +63,41 @@ h2 {
   margin-bottom: 20px;
 }
 
-.btn-container {
-  height: 40%;
-  margin-top: 120px;
+.main {
+  position: absolute;
+  top: 50%;
+  overflow: auto;
+  transform: translateY(-50%);
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 65%;
+}
+
+.subscription-alert {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 6px;
+}
+.subscription-button {
+  margin: 0;
+  padding: 6px 30px;
+  width: fit-content;
+  display: block;
+  background-color: var(--color-orange-dark);
+}
+
+.btn-container {
+  width: fit-content;
   display: grid;
   /* Use CSS Grid */
   grid-template-columns: repeat(2, 1fr);
   /* Cria duas colunas de igual largura */
-  gap: 20px;
-  flex-wrap: wrap;
+  gap: 10px;
+  margin: 20px 0 10px 0;
   justify-content: center;
-  margin-bottom: 30px;
-  padding-top: 20px;
 }
 
 .dashboard-button {
@@ -70,6 +105,7 @@ h2 {
   flex-direction: column;
   align-items: center;
   background-color: #f3f5f0;
+  margin: 0;
   color: var(--color-orange-dark);
   border: 1px solid;
   border-color: var(--color-blue-dark);
@@ -151,14 +187,12 @@ h2 {
 }
 
 .medias {
-  height: fit-content;
   color: var(--color-blue-dark);
-  position: fixed;
-  bottom: 15%;
 }
 
 .icon-container {
-  height: 80px;
+  height: 12%;
+  max-height: 12%;
   width: 100%;
   display: flex;
   justify-content: space-between;
