--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,18 @@
   text-align: center;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+.loading-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
