--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -25,7 +25,7 @@
   max-height: 20%;
   position: fixed;
   top: 0;
-  overflow: hidden;
+  overflow: auto;
   display: flex;
   flex-direction: column;
   flex-flow: column nowrap;
@@ -110,7 +110,8 @@ h2 {
   border: 1px solid;
   border-color: var(--color-blue-dark);
   border-radius: 10px;
-  width: 120px;
+  width: 40vw;
+  max-width: 120px;
   height: 120px;
   font-size: 18px;
   cursor: pointer;
@@ -136,14 +137,17 @@ h2 {
   width: 100%;
   /* Ocupar toda a largura do botão */
   height: 70%;
-  /* Ocupar 60% da altura do botão */
-  padding-top: 10%;
-
 }
 
 .icon {
-  font-size: 36px;
+  font-size: 11vw;
+  width: auto;
+  max-width: 50px;
+  max-height: 50px;
+}
 
+.icon-btn {
+  font-size: 45px;
 }
 
 .text-wrapper {
@@ -200,7 +204,7 @@ h2 {
   align-items: center;
   border-top: 2px solid var(--color-blue-dark);
   bottom: 0;
-  padding: 10px 0 1rem 0;
+  padding: 10px 0 0 0;
   z-index: 1000;
   background-color: var(--color-white2);
 }
@@ -216,20 +220,21 @@ h2 {
 
 .centered-image {
   margin: 0 10px;
-  height: 100% !important;
-  width: auto !important;
+  height: 20vw;
+  max-width: 70px;
+  max-height: 70px;
 }
 
 .side-icon-button {
   all: unset;
   color: var(--color-orange-dark);
   height: 80%;
-  width: auto;
+  width: 8vw;
   flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 12px 8px 0px 8px;
+  justify-content: center;
 }
 
 .side-icon-button-text {
